--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         </activity>
         <activity android:name=".Activity_2"></activity>
         <activity android:name=".Activity_3"></activity>
+        <activity android:name=".Activity_4"></activity>
     </application>
 
 </manifest>
